--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,13 +4,14 @@
 name: Python application
 
 on:
+ # think of “push” as “trigger” 
   push:
-    branches: [ "main" ]
+    branches: 
+      - 'feature/git_action'
+ # “pull_request” as “pr”
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches: 
+      - 'main'
 
 jobs:
   build:
@@ -19,21 +20,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3.8.0
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.8.0"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        pip install -r requirements.txt
+
     - name: Test with pytest
       run: |
-        pytest
+        pytest -vv main.py -s
