add nunit folder

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,4 +31,11 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest -vv main.py -s
+        pytest -vv main.py -s --Nunitxml=Nunit/test-output.xml
+
+    - name: Upload pytest test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-results-${{ matrix.python-version }}
+          path: Nunit/test-output.xml
+        if: ${{ always() }}
