--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,11 +31,11 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest -vv main.py --Nunitxml=Nunit/test-output.xml
+        pytest -vv main.py --html=./report/report.html
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
       with:
-        name: pytest-results-${{ matrix.python-version }}
-        path: Nunit/test-output.xml
+        name: pytest-results
+        path: ./report/report.html
       if: ${{ always() }}
