--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,11 +37,8 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: pytest-results
-        path: ./report/report.html
+        path: ./report/
       if: ${{ always() }}
 
-    - name: HTML Preview
-      id: html_preview
-      uses: pavi2410/html-preview-action@v2
-      with:
-        html_file: 'report.html'
+
+    
