--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest -vv main.py --html=./report/report.html
+        pytest -vv main.py --html=./report/report.html --junit-xml=./report/test-results.xml
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
@@ -39,6 +39,13 @@ jobs:
         name: pytest-results
         path: ./report/
       if: ${{ always() }}
+
+
+    - name: Publish Test Results  
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      if: always()
+      with:
+        files: "./test-results.xml"
 
 
     
