--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,14 +24,14 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.8.0"
-    - name: Install dependencies
+
+    - name: Build Docker Images
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        docker build -t api-test .
 
     - name: Test with pytest
       run: |
-        pytest -vv main.py --html=./report/report.html --junit-xml=./reports/test-results.xml
+         docker run -e API_TEST="main.py" -e api-test 
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
