--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,13 +35,14 @@ jobs:
 
          docker run -e API_TEST="main.py" api-test 
          ID=$(docker ps -aqf "ancestor=api-test")
-         docker cp $ID:/home/docker/code/ ${{ github.workspace }}/reports
+         echo -e "docker cp $ID:/home/docker/code/ ${{ github.workspace }}/reports"
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
       with:
         name: pytest-results
         path: ./report/
+        if-no-files-found: error
       if: ${{ always() }}
 
 
