--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,7 +41,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: pytest-results
-        path: ./report/
+        path: ./reports/
         if-no-files-found: error
       if: ${{ always() }}
 
