--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,13 +35,13 @@ jobs:
 
          docker run -e API_TEST="main.py" api-test 
          ID=$(docker ps -aqf "ancestor=api-test")
-         docker cp $ID:/home/docker/code/ ${{ github.workspace }}/reports
+         docker cp $ID:/home/docker/code/reports ${{ github.workspace }}/reports
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
       with:
         name: pytest-results
-        path: ./reports/
+        path: ./reports
         if-no-files-found: error
       if: ${{ always() }}
 
