--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
          docker ps -aqf "ancestor=api-test"
          ID=$(docker ps -aqf "ancestor=api-test")
-         docker cp $ID:/home/docker/code/reports ${{ github.workspace }}/reports
+         docker cp $ID:/home/docker/code/reports ${{ github.workspace }}/
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
