--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,13 +31,16 @@ jobs:
 
     - name: Test with pytest
       run: |
-         docker run -e API_TEST="main.py" api-test
+        docker run --workdir ${{ github.workspace }} -e API_TEST="main.py" -v "/home/docker/code":"/github/workflow" api-test
+        
+    
+    # docker run -e API_TEST="main.py" api-test
 
-    - name: Copy Container file
-      run: |
-         docker ps -aqf "ancestor=api-test"
-         ID=$(docker ps -aqf "ancestor=api-test")
-         docker cp $ID:/home/docker/code/reports ${{ github.workspace }}/
+    # - name: Copy Container file
+    #   run: |
+    #      docker ps -aqf "ancestor=api-test"
+    #      ID=$(docker ps -aqf "ancestor=api-test")
+    #      docker cp $ID:/home/docker/code/reports ${{ github.workspace }}/
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
