--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,8 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run --workdir ${{ github.workspace }} -e API_TEST="main.py" -v "/home/docker/code":"/github/workflow" api-test
+        docker run -e API_TEST="main.py" api-test
+        docker run --workdir ${{ github.workspace }} -v "/home/docker/code":"/github/workflow" api-test
         
     
     # docker run -e API_TEST="main.py" api-test
