--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
      
-        docker run --workdir ${{ github.workspace }} --rm -e API_TEST="main.py" api-test -v "/home/docker/code":"/github/workflow" api-test
+        docker run -e API_TEST="main.py" api-test --rm  -v "/home/docker/code":"/github/workflow" api-test
         
     
     # docker run -e API_TEST="main.py" api-test
