--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
      
         docker run -e API_TEST="main.py" -v "/home/docker/code":"/github/workflow" api-test
-        docker run --workdir ${{ github.workspace }} --rm "/home/docker/code":"/github/workflow" api-test
+        docker run --workdir ${{ github.workspace }} --rm -v "/home/docker/code":"/github/workflow" api-test
         
     
     # docker run -e API_TEST="main.py" api-test
