--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
      
-        docker run --workdir ${{ github.workspace }} -v "/home/docker/code":${{ github.workspace }} api-test run -e API_TEST="main.py"
+        docker run --workdir ${{ github.workspace }} -v "${{ github.workspace }}":"/home/docker/code" api-test run -e API_TEST="main.py"
         
         
         
