--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,11 +29,18 @@ jobs:
       run: |
         docker build -t api-test . 
 
-    - name: Test with pytest
-      run: |
+    # - name: Test with pytest
+    #   run: |
      
-        docker run --workdir /github/workspace --rm -e INPUT_ARGS -e HOME -e GITHUB_JOB -e GITHUB_REF -e GITHUB_SHA -e GITHUB_REPOSITORY -e GITHUB_REPOSITORY_OWNER -e GITHUB_RUN_ID -e GITHUB_RUN_NUMBER -e GITHUB_RETENTION_DAYS -e GITHUB_RUN_ATTEMPT -e GITHUB_ACTOR -e GITHUB_WORKFLOW -e GITHUB_HEAD_REF -e GITHUB_BASE_REF -e GITHUB_EVENT_NAME -e GITHUB_SERVER_URL -e GITHUB_API_URL -e GITHUB_GRAPHQL_URL -e GITHUB_WORKSPACE -e GITHUB_ACTION -e GITHUB_EVENT_PATH -e GITHUB_ACTION_REPOSITORY -e GITHUB_ACTION_REF -e GITHUB_PATH -e GITHUB_ENV -e RUNNER_OS -e RUNNER_NAME -e RUNNER_TOOL_CACHE -e RUNNER_TEMP -e RUNNER_WORKSPACE -e ACTIONS_RUNTIME_URL -e ACTIONS_RUNTIME_TOKEN -e ACTIONS_CACHE_URL -e GITHUB_ACTIONS=true -e CI=true -e API_TEST="main.py" -v "/home/docker/code":${{ github.workspace }} api-test 
+    #     docker run -e API_TEST="main.py" api-test 
         
+    - name: Mounting
+      run: |        
+        docker run it -v "/home/docker/code":${{ github.workspace }} api-test 
+        ID=$(docker ps -aqf "ancestor=api-test")
+        docker inspect $ID
+        docker start $ID
+        docker run -e API_TEST="main.py" api-test 
         
         
     # docker run --workdir ${{ github.workspace }} --rm -v "/home/docker/code":"/github/workflow" api-test
