--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,10 +29,10 @@ jobs:
       run: |
         docker build -t api-test . 
 
-    # - name: Test with pytest
-    #   run: |
+    - name: Test with pytest
+      run: |
      
-    #     docker run -e API_TEST="main.py" api-test 
+        docker run -e API_TEST="main.py" api-test 
         
     - name: Mounting
       run: |        
