--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
      
-        docker run -e API_TEST="main.py" api-test 
+        docker run --workdir ${{ github.workspace }} -e API_TEST="main.py" -v "/home/docker/code":${{ github.workspace }} api-test
         
     - name: Mounting
       run: |        
