--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,10 +32,11 @@ jobs:
     - name: Test with pytest
       run: |
      
-        docker run --workdir ${{ github.workspace }} -e API_TEST="main.py" -v "/home/docker/code":${{ github.workspace }} api-test
+        docker run --workdir ${{ github.workspace }} -v "/home/docker/code":${{ github.workspace }} api-test
+        docker run -e API_TEST="main.py" api-test
         docker inspect api-test
 
-        
+
     - name: Mounting
       run: |        
         docker run --workdir ${{ github.workspace }} -v "/home/docker/code":${{ github.workspace }} api-test 
