--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,9 +31,10 @@ jobs:
 
     - name: Test with pytest
       run: |
-     
-        docker run --workdir ${{ github.workspace }} -v "/home/docker/code":${{ github.workspace }} api-test
-        docker run -e API_TEST="main.py" api-test
+        docker run --name Testv1 -it \
+        -mount type=bind,source="/home/docker/code",destination=${{ github.workspace}} api-test
+
+
         docker inspect api-test
 
 
