--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
         docker run --name Testv1 -it \
-        -mount type=bind,source="/home/docker/code",destination=${{ github.workspace}} api-test
+        --mount type=bind,source="/home/docker/code",destination=${{ github.workspace}} api-test
 
 
         docker inspect api-test
