--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run --name Testv1 --mount type=bind,source="/home/docker/code",destination=${{ github.workspace}} api-test
+        docker run --mount type=bind,source="/home/docker/code",destination=${{ github.workspace}} api-test
 
 
         docker inspect api-test
