--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,14 +31,16 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run --mount type=bind,source="/home/docker/code",destination=${{ github.workspace}} api-test
+        ID=$(docker ps -aqf "ancestor=api-test")      
+        docker run --mount type=bind,source=$PWD/$ID/home/docker/code,destination=${{ github.workspace}} api-test
 
 
         docker inspect api-test
 
 
     - name: Mounting
-      run: |        
+      run: | 
+         
         docker run --workdir ${{ github.workspace }} -v "/home/docker/code":${{ github.workspace }} api-test 
         docker inspect api-test
 
