--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
         ID=$(docker ps -aqf "ancestor=api-test")      
-        docker run --mount type=bind,source=$ID:/home/docker/code,destination=${{ github.workspace}} api-test
+        docker run --mount type=bind,source=$ID/home/docker/code,destination=${{ github.workspace}} api-test
        
 
 
