--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,8 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
         ID=$(docker ps -aqf "ancestor=api-test")    
-        docker exec -it $ID
-        ls  
+        docker inspect $ID
         docker run --name $CONTAINER_NAME --mount type=bind,source=$ID/home/docker/code,destination=${{ github.workspace}} api-test
        
 
