--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,12 +31,13 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run -e API_TEST="main.py" api-test
+        docker run -e API_TEST="main.py" \
+        --mount type=bind,source=/home/docker/code,destination=${{ github.workspace}} api-test
 
     - name: Copy Container file
       run: |       
 
-        docker run --mount type=bind,source=$ID/home/docker/code,destination=${{ github.workspace}} api-test
+        docker run --mount type=bind,source=/home/docker/code,destination=${{ github.workspace}} api-test
        
 
 
