--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,6 +33,7 @@ jobs:
       run: |
         docker run -e API_TEST="main.py" api-test
         ls
+        -v "/home/docker/code":"/github/workflow"
 
     - name: Copy Container file
       run: |       
