--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,9 +31,9 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run --workdir /home/docker/code -e API_TEST="main.py" -v "/home/docker/code":"/github/workflow" api-test
+        docker run -e API_TEST="main.py" -v "/home/docker/code":"/github/workflow" api-test
         ls
-        docker run -v "/home/docker/code":"/github/workflow" api-test
+       
 
     - name: Copy Container file
       run: |       
