--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,8 +37,7 @@ jobs:
 
     - name: Copy Container file
       run: |       
-
-        docker run --mount type=bind,source=/home/docker/code,destination=${{ github.workspace}} api-test
+        docker run --mount type=bind,source=$(pwd),destination=${{ github.workspace}} api-test
        
 
 
