--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run -e API_TEST="main.py" api-test
+        docker run -e API_TEST="main.py" --mount type=bind,source=$(pwd),destination=${{ github.workspace}} api-test
         ls
        
 
