--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Copy Container file
       run: |       
         docker run --mount type=bind,source=$(pwd),destination=${{ github.workspace}} api-test
-       
+        docker inspect api-test
 
 
 
