--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker volume ls
+        docker volume inspect api-test
         docker run --privileged --mount type=bind,source=$(pwd),destination=${{ github.workspace}} -e API_TEST="main.py" api-test
         docker inspect api-test
        
