--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,10 +31,14 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker volume inspect /home/docker/code/
+        
         docker run --privileged --mount type=bind,source=$(pwd),destination=${{ github.workspace}} -e API_TEST="main.py" api-test
+        docker volume inspect /home/docker/code/
         docker inspect api-test
-       
+        docker service create \
+        --mount 'type=bind,source=$(pwd),destination=${{ github.workspace}}'
+        -- name myservice \
+        api-test
 
     # - name: Copy Container file
     #   run: |       
