--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,9 +36,9 @@ jobs:
 
     - name: Copy Container file
       run: |         
-        docker service create
+        docker service create \
         --mount 'type=bind,source=$(pwd),destination=${{ github.workspace}}'
-        -- name myservice
+        -- name myservice \
         api-test
 
     # - name: Copy Container file
