--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,8 +36,8 @@ jobs:
 
     - name: Copy Container file
       run: |         
-        docker run -v $(pwd):${{ github.workspace}} --name myservice api-test
-        docker inspect api-test
+        docker run --mount type=bind,source=$(pwd),destination=${{ github.workspace}} --name myservice api-test
+        docker inspect myservice
 
     # - name: Copy Container file
     #   run: |       
