--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,8 +32,9 @@ jobs:
     - name: Test with pytest
       run: |
         
-        docker run --privileged --mount type=bind,source=$(pwd),destination=${{ github.workspace}} -e API_TEST="main.py" api-test
-
+        docker run --privileged --mount type=bind,source=/home/docker/code,destination=${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
+        docker inspect myservice
+        
     - name: Copy Container file
       run: |         
         docker run --mount type=bind,source=/home/docker/code,destination=${{ github.workspace}} --name myservice api-test
