--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,13 +32,15 @@ jobs:
     - name: Test with pytest
       run: |
         
-        docker run --workdir /home/docker/code --mount type=bind,source=$(pwd),destination=${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
+        docker run --workdir /home/docker/code -v "/home/docker/code":"/github/workflow" --name myservice -e API_TEST="main.py" api-test
         docker inspect myservice
 
-    - name: Copy Container file
-      run: |         
-        docker run --mount type=bind,source=/home/docker/code,destination=${{ github.workspace}} --name myservice api-test
-        docker inspect myservice
+    # - name: Copy Container file
+    # docker run --workdir /home/docker/code --mount type=bind,source=$(pwd),destination=${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
+
+    #   run: |         
+    #     docker run --mount type=bind,source=/home/docker/code,destination=${{ github.workspace}} --name myservice api-test
+    #     docker inspect myservice
 
     # - name: Copy Container file
     #   run: |       
