--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
         
-        docker run --workdir /home/docker/code -v "/home/docker/code":"/github/workflow" --name myservice -e API_TEST="main.py" api-test
+        docker run --workdir /home/docker/code -v "/home/docker/code":${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
         docker inspect myservice
 
     # - name: Copy Container file
