--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,8 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
         
-        docker run --workdir /home/docker/code -v "/home/docker/code":${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
-        docker ps  -a
+        docker run --workdir /home/docker/code -v "/home/docker/code":${{ github.workspace}} --name api-test -e API_TEST="main.py" api-test
         docker inspect myservice
 
     # - name: Copy Container file
@@ -57,11 +56,9 @@ jobs:
     
     # docker run -e API_TEST="main.py" api-test
 
-    # - name: Copy Container file
-    #   run: |
-    #      docker ps -aqf "ancestor=api-test"
-    #      ID=$(docker ps -aqf "ancestor=api-test")
-    #      docker cp $ID:/home/docker/code/reports ${{ github.workspace }}/
+    - name: Copy Container file
+      run: |
+        docker run -e API_TEST="main.py" api-test
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
