--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -59,6 +59,7 @@ jobs:
     - name: Copy Container file
       run: |
         docker run -e API_TEST="main.py" api-test
+        docker inspect myservice
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
