--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
         
-        docker run --workdir /home/docker/code -v "/home/docker/code":${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
+        docker run --workdir /home/docker/code -v "$(pwd)":${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
         docker inspect myservice
 
     # - name: Copy Container file
@@ -59,8 +59,7 @@ jobs:
     - name: Copy Container file
       run: |
         docker run -e API_TEST="main.py" api-test
-        docker run   --mount type=bind,source="$(pwd)",target=${{ github.workspace}} --name service api-test
-
+        docker run --mount type=bind,source="$(pwd)",target=${{ github.workspace}} --name service -e API_TEST="main.py" api-test
         docker inspect service
 
     - name: Upload pytest test results
