--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Test with pytest
       run: |
         
-        docker run --workdir /home/docker/code -v "$(pwd)":${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
+        docker run --workdir /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock -v "$(pwd)":${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
         docker inspect myservice
 
     # - name: Copy Container file
