--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,8 +15,8 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    container:
 
     steps:
     - uses: actions/checkout@v3
@@ -28,6 +28,13 @@ jobs:
     - name: Build Docker Images
       run: |
         docker build -t api-test . 
+
+  test:
+    runs-on: ubuntu-latest
+    container:
+      image: api-test
+      volumes:
+        - /home/docker/code:${{ github.workspace}}
 
     # - name: Test with pytest
     #   run: |
