--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,7 +16,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
 
     steps:
     - uses: actions/checkout@v3
@@ -35,7 +34,7 @@ jobs:
       image: api-test
       volumes:
         - /home/docker/code:${{ github.workspace}}
-
+    steps:
     # - name: Test with pytest
     #   run: |
         
