--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,14 +28,14 @@ jobs:
       run: |
         docker build -t api-test . 
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    container:
-      image: api-test
-      volumes:
-        - /home/docker/code:${{ github.workspace}}
-    steps:
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   container:
+  #     image: api-test
+  #     volumes:
+  #       - /home/docker/code:${{ github.workspace}}
+  #   steps:
     # - name: Test with pytest
     #   run: |
         
@@ -65,7 +65,7 @@ jobs:
 
     - name: Copy Container file
       run: |
-        docker run -e API_TEST="main.py" api-test
+
         docker run -w /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/var/lib/docker/volumes,target=${{ github.workspace}} --name service -e API_TEST="main.py" api-test
         docker inspect service
 
