--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -65,8 +65,9 @@ jobs:
 
     - name: Copy Container file
       run: |
-
-        docker run -w /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/var/lib/docker/volumes,target=${{ github.workspace}} --name service -e API_TEST="main.py" api-test
+        docker run -v /var/run/docker.sock:/var/run/docker.sock api-test
+        docker run -e API_TEST="main.py" api-test
+        docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/var/lib/docker/volumes,target=${{ github.workspace}} --name service -api-test
         docker inspect service
 
     - name: Upload pytest test results
