--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -70,7 +70,7 @@ jobs:
 
     - name: Copy Container file
       run: |
-      docker build -f /Dockerfile2 -t my_test .
+      docker build -f /Makefile -t my_test .
       docker inspect service
 # docker run -v /var/run/docker.sock:/var/run/docker.sock api-test
 # docker run -e API_TEST="main.py" api-test
