--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,13 @@ jobs:
         python-version: "3.8.0"
 
     - name: Build Docker Images
+      strategy:
+        matrix:
+          include:
+            - dockerfile: ./Dockerfile
+              image: api-test
+            - dockerfile: ./Dockerfile
+              image: my-test
       env:
          DOCKER_BUILDKIT: 1
       run: |
@@ -70,7 +77,7 @@ jobs:
 
     - name: Copy Container file
       run: |
-      docker build -t my_test -f Dockerfile2 .
+
       docker inspect service
 # docker run -v /var/run/docker.sock:/var/run/docker.sock api-test
 # docker run -e API_TEST="main.py" api-test
