--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -78,7 +78,7 @@ jobs:
     - name: Copy Container file
       run: |
 
-      docker inspect service
+      docker inspect service my-test
 # docker run -v /var/run/docker.sock:/var/run/docker.sock api-test
 # docker run -e API_TEST="main.py" api-test
 # docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/var/lib/docker/volumes,target=${{ github.workspace}} --name service -api-test
