--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,17 +25,10 @@ jobs:
         python-version: "3.8.0"
 
     - name: Build Docker Images
-      strategy:
-        matrix:
-          include:
-            - dockerfile: ./Dockerfile
-              image: api-test
-            - dockerfile: ./Dockerfile2
-              image: my-test
       env:
          DOCKER_BUILDKIT: 1
-      # run: |
-      #   docker build -t api-test . 
+      run: |
+        docker build -t api-test . 
 
   # test:
   #   runs-on: ubuntu-latest
@@ -77,11 +70,11 @@ jobs:
 
     - name: Copy Container file
       run: |
-      docker inspect service my-test
+      
 # docker run -v /var/run/docker.sock:/var/run/docker.sock api-test
 # docker run -e API_TEST="main.py" api-test
-# docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/var/lib/docker/volumes,target=${{ github.workspace}} --name service -api-test
-
+ docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/var/lib/docker/volumes,target=${{ github.workspace}} --name service -api-test
+docker inspect service api-test
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
