--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -70,11 +70,11 @@ jobs:
 
     - name: Copy Container file
       run: |
-      
+        docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/var/lib/docker/volumes,target=${{ github.workspace}} --name service -api-test
+        docker inspect service
 # docker run -v /var/run/docker.sock:/var/run/docker.sock api-test
 # docker run -e API_TEST="main.py" api-test
- docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/var/lib/docker/volumes,target=${{ github.workspace}} --name service -api-test
-docker inspect service api-test
+
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
