--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Copy Container file
       run: |
-        docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/home/docker/code,target=${{ github.workspace}} --name service api-test
+        docker run -v /var/run/docker.sock:/var/run/docker.sock --mount type=bind,source=/,target=${{ github.workspace}} --name service api-test
         docker inspect service 
 # docker run -v /var/run/docker.sock:/var/run/docker.sock api-test
 # docker run -e API_TEST="main.py" api-test
