--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run --name myservice -e API_TEST="main.py" api-test
+        docker run --name myservice -e API_TEST="main.py" -e WORKDIR=${{ github.workspace}} api-test
         docker inspect myservice
 
 #     docker run -w /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock -v /var/lib/docker/volumes:${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
@@ -57,7 +57,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: pytest-results
-        path: ${{ github.workspace }}/reports
+        path: ./reports
         if-no-files-found: error
       if: ${{ always() }}
 
