--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        docker run -v ${{ github.workspace}}:${{ github.workspace}} --name myservice -e WORKDIR=${{ github.workspace}}  -e API_TEST="main.py" api-test
+        docker run --w ${{ github.workspace}} -v ${{ github.workspace}}:${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
         docker inspect myservice
 
 #     docker run -w /home/docker/code -v /var/run/docker.sock:/var/run/docker.sock -v /var/lib/docker/volumes:${{ github.workspace}} --name myservice -e API_TEST="main.py" api-test
