--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-       working-directory: ${{ github.workspace }}
+       working-directory: ${{env.working-directory}}
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.8.0
